--- a/app/theme/app.ios.scss
+++ b/app/theme/app.ios.scss
@@ -1,36 +1,68 @@
 // http://ionicframework.com/docs/v2/theming/
-
-
 // App Shared Variables
 // --------------------------------------------------
 // Shared Sass variables go in the app.variables.scss file
 @import "app.variables";
-
-
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
-
-
 // Ionic iOS Sass
 // --------------------------------------------------
 // Custom App variables must be declared before importing Ionic.
 // Ionic will use its default values when a custom variable isn't provided.
 @import "ionic.ios";
-
-
 // App Shared Sass
 // --------------------------------------------------
 // All Sass files that make up this app goes into the app.core.scss file.
 // For simpler CSS overrides, custom app CSS must come after Ionic's CSS.
 @import "app.core";
 
-
 // App iOS Only Sass
 // --------------------------------------------------
 // CSS that should only apply to the iOS app
 
-
 .item {
   color: #444;
 }
+
+.item-button, .button-outline {
+  border-radius: 3px;
+  //text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: .03rem;
+}
+
+//.toolbar .segment-button {
+//  border-radius: 2px;
+//}
+
+ion-segment {
+  //text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: .03rem;
+}
+
+.segment-button:last-of-type {
+  border-radius: 0 3px 3px 0;
+}
+
+.segment-button:first-of-type {
+  border-radius: 3px 0 0 3px;
+}
+
+ion-segment.wide > ion-segment-button {
+  max-width: 150px !important;
+}
+
+ion-segment.thin {
+  ion-segment-button {
+    line-height: 2rem;
+    height: 2.3rem
+
+  }
+
+  .ion-segement{
+}
+
+}
+
