--- a/app/theme/app.variables.scss
+++ b/app/theme/app.variables.scss
@@ -1,9 +1,7 @@
 // http://ionicframework.com/docs/v2/theming/
-
 // Ionic Shared Functions
 // --------------------------------------------------
 // Makes Ionic Sass functions available to your App
-
 @import "globals.core";
 
 // App Shared Variables
@@ -15,7 +13,6 @@
 // in the app.core.scss file and not this file. Sass variables specific
 // to the mode belong in either the app.ios.scss or app.md.scss files.
 
-
 // App Shared Color Variables
 // --------------------------------------------------
 // It's highly recommended to change the default colors
@@ -26,18 +23,23 @@
 // are different per mode.
 
 $colors: (
-  primary:    #0397e5,
-  secondary: #4f4f4f,
-  danger:     #f53d3d,
-  danger-lite: #db4f51,
-  light:      #f4f4f4,
-  gray:       #666666,
-  dark:       #222,
-  dark-gray:  #444,
-  warning:    #d6a223,
-  success:    #69BB7B,
-  spartan:    #0a7a0f,
-  facebook:   #3B5998,
-  twitter:   #00aced,
-  google:   #d34836,
+        primary:        #0397e5,
+        primary-dark:   #02679D,
+        secondary:      #4f4f4f,
+        danger:         #FF3900,
+        danger-lite:    #db4f51,
+        //white:          #fff,
+        //light:          #f4f4f4,
+        light:          #fff,
+        light-gray:     #666666,
+        gray:           #444444,
+        dark:           #222,
+        dark-gray:      #444,
+        warning:        #FFBA00,
+        help:           #FF8B00,
+        success:        #3abc44,
+        spartan:        #0a7a0f,
+        facebook:       #3B5998,
+        twitter:        #00aced,
+        google:         #d34836,
 );
