--- a/app/pages/teams/tabs/player/player.scss
+++ b/app/pages/teams/tabs/player/player.scss
@@ -1,5 +1,14 @@
 .player {
 
+  .player {
+    font-size: 2.5rem;
+    font-weight: 500;
+  }
+
+  .meta {
+    font-size: 1.5rem;
+  }
+
   div.padding-thin {
     padding: 8px;
   }
