--- a/app/pages/teams/teams.scss
+++ b/app/pages/teams/teams.scss
@@ -38,13 +38,13 @@
   }
 
   .team-card-basketball {
-    background: url("../../..//wood.jpg");
+    background: url("wood.jpg");
     background-size: cover;
     opacity: .8;
   }
 
   .team-card-soccer {
-    background: url("../../..//grass.jpg");
+    background: url("grass.jpg");
     background-size: cover;
     opacity: .5;
 
