--- a/app/pages/main/events/event/event-brackets/brackets.scss
+++ b/app/pages/main/events/event/event-brackets/brackets.scss
@@ -42,7 +42,7 @@
       }
     }
 
-    ion-col[right-box] {
+    .ion-col[right-box] {
       border-left: 1px solid rgba(0, 0, 0, 0.12);;
     }
 
