Message Board Done.

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -36,10 +36,10 @@
 @import "app.thumbnail";
 
 // import fonts from Google
-//@import url('https://fonts.googleapis.com/css?family=Ubuntu:400,500,700');
-//@import url('https://fonts.googleapis.com/css?family=Oswald:300,400,700');
-//@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
-//@import url('https://fonts.googleapis.com/css?family=Quicksand:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu:400,500,700');
+@import url('https://fonts.googleapis.com/css?family=Oswald:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
+@import url('https://fonts.googleapis.com/css?family=Quicksand:300,400,700');
 
 
 body {
