--- a/app/theme/app.auth.scss
+++ b/app/theme/app.auth.scss
@@ -80,7 +80,24 @@ ion-card.auth-form {
   h1.big-message {
     font-family: "co-headline", sans-serif;
     color: #fff;
-    font-size: 3rem;
+    font-size: 2rem;
+    margin-bottom: 20px;
+    margin-top: 10px;
+
+    span.myludus {
+     /* font-size: 5rem;*/
+     font-size: 3rem;
+      span.my {
+        font-weight: 800;
+        color: color($colors, dark-3);
+      }
+    }
+
+  }
+h1.signup-message {
+    font-family: "co-headline", sans-serif;
+    color: #fff;
+    font-size: 2.2rem;
     margin-bottom: 20px;
     margin-top: 10px;
 
@@ -93,7 +110,6 @@ ion-card.auth-form {
     }
 
   }
-
 } // end global auth styles
 
 .signup, .login {
